# xlive-research

./: .gitignore  .gitmodules  README.md
configs/: scylla_hide.ini  xlive.dll.no_cat_hash_check.1337  xlive.dll.no_cat_root_check.1337  xlive.dll.no_pe_verify_hash.1337
includes/: xlive.hexpat
patterns/: xe_keys_obfuscate.hexpat  xlive_protected_data.hexpat
scripts/: aes_block.py
scripts/emulation/: dump_keys.py  run_block_encrypt.py
scripts/emulation/keys/: Microsoft_Corporate_Root_Authority.dn.der  Microsoft_Corporate_Root_Authority.spki.der  Microsoft_Corporate_Root_CA.dn.der  Microsoft_Corporate_Root_CA.spki.der  Microsoft_Root_Authority.dn.der  Microsoft_Root_Authority.spki.der  Microsoft_Root_Certificate_Authority.dn.der  Microsoft_Root_Certificate_Authority.spki.der  manifest.txt
scripts/frida/: aes.js  secbuf.js  xekeys.js  xliveprotectdata.js
tools/xwife/: CMakeLists.txt
tools/xwife/src/: aes.cpp  aes.hpp  c_small_buffer.cpp  c_small_buffer.hpp  main.cpp  ops.cpp  ops.hpp  panorama.cpp  panorama.hpp  sha.cpp  sha.hpp  syncrosoft.cpp  syncrosoft.hpp  xe_keys_obfuscate.cpp  xe_keys_obfuscate.hpp  xlive_protect_data.cpp  xlive_protect_data.hpp
tools/xwife/tests/: test_ops.cpp
